Avoid cropping finalist images on vote form.

--- a/assets/css/vote.css
+++ b/assets/css/vote.css
@@ -579,6 +579,9 @@
     height: 15em;
     object-fit: cover;
   }
+  form .category ul > li img[style*="background-color"] {
+    object-fit: contain;
+  }
   form section {
     border-width: 0.125em;
     border-style: solid;
